--- a/Deque/Deque.csproj
+++ b/Deque/Deque.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{60319871-5251-4801-9AD5-0ABC8D389613}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FILO</RootNamespace>
-    <AssemblyName>FILO</AssemblyName>
+    <RootNamespace>DequeCraft</RootNamespace>
+    <AssemblyName>Deque</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -69,7 +69,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FILOCraft.cs" />
+    <Compile Include="DequeCraft.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
